# fmapper

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
include/: expressions.h  expressions.hpp  operations.hpp  types.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  add_test.cpp  expressions_test.cpp
